# guiness

./: .gitignore  README.md  dconfig
doc/: architecture.md
doc/html/: classBus-members.html  classBus.html  classDebugger-members.html  classLoggerProxy-members.html  classLoggerProxy.html  classLoggerProxy.js  debugger_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  (+11 more)
docs/: annotated.html  annotated_dup.js  bus_8hpp_source.html  classBus-members.html  classBus.html  classBus.js  classBusDevice-members.html  classBusDevice.html  classBusDevice.js  classConfig-members.html  classConfig.html  classConfig.js  classConfigEntry-members.html  classConfigEntry.html  classConfigEntry.js  classDebugger.html  classDebugger.js  classDummyBusDevice-members.html  classDummyBusDevice.html  classDummyBusDevice.js  classIdLogger-members.html  classIdLogger.html  classIdLogger.js  classLogger-members.html  classLogger.html  classLogger.js  classVideo-members.html  classVideo.html  classVideo.js  classWRam-members.html  classWRam.html  classWRam.js  classes.html  config_8hpp_source.html  config__entry_8hpp_source.html  debugger_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen.css  doxygen_crawl.html  (+17 more)
src/: CMakeLists.txt  bus.cpp  bus.hpp  config.cpp  config.hpp  config_entry.cpp  config_entry.hpp  config_factory.cpp  config_factory.hpp  debugger.cpp  debugger.hpp  dummy_device.cpp  dummy_device.hpp  logger.cpp  logger.hpp  main.cpp  video.cpp  video.hpp  wram.cpp  wram.hpp
(+48 files in other folders)
